Adding currency exchange function

--- a/Practicas/Introducción JavaScript/index.html
+++ b/Practicas/Introducción JavaScript/index.html
@@ -146,6 +146,7 @@
             <div class="container">
                 <div class="section">
                     <h2><em>La mejor opción para ahorrar tiempo en tus días ocupados.</em></h2>
+                    <h1><a class="red-text" href="convertirMoneda.html">Click aqui para conversión de Monedas</a></h2>
                     <p>
                         Banco de tiempo esta pensado para las personas que necesitan una mano extra en su día a día para 
                         llevar a cabo diversas tareas y ahorrar tiempo.
